# mnokol_tiy_schedule_backend

./: .gitignore  LICENCE  Makefile  README.md  deployment.md  pyproject.toml
app/: main.py  utils.py
app/api/: __init__.py  deps.py  groups.py  router.py  schedule.py
app/models/: __init__.py  models.py  models_parser.py
app/services/tyuiu/: http_client.py  schedule_api.py  schedule_days_memory.py  schedule_parser.py
app/tyuiu/: http_client.py  schedule_api.py  schedule_days_memory.py  schedule_parser.py
docker/fastapi/: Dockerfile
