[tool.poetry]
name = "tiyvizor"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.2"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.10.2"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
apscheduler = "^3.9.1.post1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.214"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "single"

[tool.black]
skip-string-normalization = true
line-length = 120
exclude = '(\.git|\.venv|\.vscode|\.env*)'